--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,5 +1,4 @@
 # Core Dependencies
-azure-ai-inference>=1.0.0b6  # GitHub Models API client
-azure-core>=1.30.0           # Azure SDK core (required by azure-ai-inference)
+openai>=1.0.0                # Azure OpenAI API client
 requests>=2.31.0             # HTTP client for API calls (includes urllib3, certifi)
 Pillow>=10.3.0               # Image processing for hero image generation
