--- a/.github/workflows/weekly-portfolio.yml
+++ b/.github/workflows/weekly-portfolio.yml
@@ -1,5 +1,9 @@
 name: Weekly Portfolio Update
 
+concurrency:
+  group: portfolio-automation
+  cancel-in-progress: false
+
 on:
   schedule:
     - cron: '45 21 * * 4'  # Every Thursday at 4:45 PM EST (9:45 PM UTC)
@@ -12,12 +16,21 @@ on:
       eval_date:
         description: 'Evaluation date (YYYY-MM-DD, leave empty for latest)'
         required: false
+      data_source:
+        description: 'Data source mode'
+        required: false
+        default: 'alphavantage'
+        type: choice
+        options:
+          - alphavantage
+          - ai
 
 jobs:
   generate-portfolio:
     runs-on: ubuntu-latest
     permissions:
       contents: write  # Required for git push
+      issues: write  # For failure notifications
     
     steps:
       - name: Checkout repository
@@ -30,11 +43,16 @@ jobs:
         with:
           python-version: '3.11'
           cache: 'pip'
+          cache-dependency-path: scripts/requirements.txt
       
       - name: Install dependencies
-        run: pip install -r scripts/requirements.txt
+        run: |
+          pip install -r scripts/requirements.txt
+          pip list  # Show versions for debugging
       
       - name: Generate portfolio update
+        id: generate
+        timeout-minutes: 15
         env:
           AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
           ALPHAVANTAGE_API_KEY: ${{ secrets.ALPHAVANTAGE_API_KEY }}
@@ -43,21 +61,55 @@ jobs:
           PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
           PIXABAY_API_KEY: ${{ secrets.PIXABAY_API_KEY }}
         run: |
+          set -x  # Debug mode
           python scripts/portfolio_automation.py \
-            --data-source alphavantage \
+            --data-source ${{ github.event.inputs.data_source || 'alphavantage' }} \
             --week ${{ github.event.inputs.week || 'auto' }} \
-            ${{ github.event.inputs.eval_date && format('--eval-date {0}', github.event.inputs.eval_date) || '' }}
+            ${{ github.event.inputs.eval_date && format('--eval-date {0}', github.event.inputs.eval_date) || '' }} \
+            2>&1 | tee automation.log
+      
+      - name: Validate generated files
+        if: success()
+        run: |
+          echo "🔍 Validating generated files..."
+          
+          # Critical: master.json must exist
+          [ -f "master data/master.json" ] || { echo "❌ master.json not found"; exit 1; }
+          
+          # Verify new post was created
+          NEW_POSTS=$(git diff --name-only HEAD | grep "Posts/.*Week-.*\.html" | wc -l)
+          if [ "$NEW_POSTS" -ne 1 ]; then
+            echo "⚠️ Expected 1 new post, found $NEW_POSTS"
+          fi
+          
+          # Check hero image exists
+          WEEK_NUM=$(ls Posts/GenAi-Managed-Stocks-Portfolio-Week-*.html 2>/dev/null | grep -oP 'Week-\K\d+' | tail -1)
+          if [ -n "$WEEK_NUM" ]; then
+            [ -f "Media/W${WEEK_NUM}.webp" ] || echo "⚠️ Hero image W${WEEK_NUM}.webp missing"
+          fi
+          
+          echo "✅ Validation passed"
       
       - name: Commit and push changes
+        if: success()
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add .
+          
+          # Add specific files only
+          git add "master data/master.json" \
+                  "master data/archive/"*.json \
+                  "Posts/"*.html \
+                  "Media/W"*.webp \
+                  "Data/W"*/
+          
           if git diff --staged --quiet; then
             echo "No changes to commit"
           else
-            git commit -m "📊 Weekly portfolio update - Week $(date +%V) [automated]"
+            WEEK_NUM=$(ls Posts/GenAi-Managed-Stocks-Portfolio-Week-*.html 2>/dev/null | grep -oP 'Week-\K\d+' | tail -1)
+            git commit -m "📊 Weekly portfolio update - Week ${WEEK_NUM:-$(date +%V)} [automated]"
             git push
+            echo "✅ Changes pushed successfully"
           fi
       
       - name: Upload execution report
@@ -66,7 +118,24 @@ jobs:
         with:
           name: portfolio-report-${{ github.run_number }}
           path: |
-            Posts/*.html
-            Media/*.webp
+            Posts/GenAi-Managed-Stocks-Portfolio-Week-*.html
+            Media/W*.webp
             master data/master.json
+            master data/archive/master-*.json
+            automation.log
           retention-days: 30
+          if-no-files-found: warn
+      
+      - name: Notify on failure
+        if: failure()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const runUrl = `${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`;
+            await github.rest.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: '🚨 Weekly Portfolio Automation Failed',
+              body: `**Workflow Failed**: [View Run](${runUrl})\n\n**Trigger**: ${context.eventName}\n**Branch**: ${context.ref}`,
+              labels: ['automation', 'bug', 'high-priority']
+            });
