--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -10,3 +10,7 @@ azure-storage-blob>=12.19.0  # Azure Blob Storage client for newsletter uploads
 # Web API Dependencies
 Flask>=3.0.0                 # Web framework for API server
 flask-cors>=4.0.0            # CORS support for frontend-backend communication
+
+# Security & Code Quality
+bandit[toml]>=1.7.5          # Security linting for Python code
+pre-commit>=3.5.0            # Git hook management for automated checks
