--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,3 +52,12 @@ repos:
         additional_dependencies: []
         language: python
         language_version: python3
+
+  # Python type checking with Mypy (relaxed for gradual adoption)
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.13.0
+    hooks:
+      - id: mypy
+        args: ['--ignore-missing-imports', '--allow-untyped-defs', '--no-strict-optional']
+        additional_dependencies: [types-requests, types-Pillow]
+        files: ^scripts/.*\.py$
