--- a/.github/workflows/generate-newsletter-full.yml
+++ b/.github/workflows/generate-newsletter-full.yml
@@ -16,9 +16,6 @@ on:
 jobs:
   generate-and-upload:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
 
     steps:
       - name: Checkout repository
@@ -51,16 +48,9 @@ jobs:
             python generate_newsletter_html.py $LATEST_WEEK
           fi
 
-      - name: Azure Login (Managed Identity)
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-
       - name: Upload to Azure Blob Storage (Stage 3)
         env:
-          STORAGE_ACCOUNT_NAME: ${{ secrets.STORAGE_ACCOUNT_NAME }}
+          STORAGE_CONNECTION_STRING: ${{ secrets.STORAGE_CONNECTION_STRING }}
         run: |
           cd scripts
           if [ -n "${{ github.event.inputs.week_number }}" ]; then
