Comprehensive audit fixes, doc updates, and workflow cleanup
Resolved critical audit issues: fixed type annotation in execute_rebalance.py, removed unused BING_SEARCH_API_KEY from workflow, and updated posts.html to remove references to missing articles. Added GPT-5 prompting improvements guide, updated documentation to reflect integrated Yahoo Finance enrichment, and improved .mypy.ini exclusion. AUDIT_REPORT.md now details code quality, architecture, and recommendations. Minor code and doc hygiene improvements throughout.

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -33,6 +33,7 @@ exclude = (?x)(
     | venv
     | build
     | dist
+    | deprecated
     )
 
 # Per-file configuration (gradually increase strictness)
